--- a/client/src/components/shell/AppShell.module.scss
+++ b/client/src/components/shell/AppShell.module.scss
@@ -33,6 +33,7 @@
 .askBtnDrift {
   left: 50%;
   transform: translateX(-50%);
+  animation: none;
 }
 
 @keyframes askPulse {
